--- a/catalog-nsili-common/pom.xml
+++ b/catalog-nsili-common/pom.xml
@@ -15,11 +15,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.codice.alliance.nsili</groupId>
+        <groupId>org.codice.alliance</groupId>
         <artifactId>nsili</artifactId>
         <version>1.10.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.codice.alliance.nsili</groupId>
     <artifactId>catalog-nsili-common</artifactId>
     <name>Alliance :: NSILI :: Common</name>
     <packaging>jar</packaging>
@@ -40,15 +41,17 @@
             <version>${cxf.version}</version>
         </dependency>
         <dependency>
-            <groupId>ddf.catalog.core</groupId>
+            <groupId>org.codice.alliance.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
-            <version>${ddf.version}</version>
+            <version>${alliance.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
             <version>${ddf.version}</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-core</artifactId>
@@ -84,11 +87,13 @@
             <artifactId>versioning-common</artifactId>
             <version>${ddf.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.codice.alliance.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
             <version>${alliance.version}</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
@@ -179,17 +184,17 @@
                                         <limit implementation="org.codice.jacoco.LenientLimit">
                                             <counter>INSTRUCTION</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.00</minimum>
+                                            <minimum>0.02</minimum>
                                         </limit>
                                         <limit implementation="org.codice.jacoco.LenientLimit">
                                             <counter>BRANCH</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.00</minimum>
+                                            <minimum>0.02</minimum>
                                         </limit>
                                         <limit implementation="org.codice.jacoco.LenientLimit">
                                             <counter>COMPLEXITY</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.00</minimum>
+                                            <minimum>0.02</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
