--- a/catalog-nsili-endpoint/pom.xml
+++ b/catalog-nsili-endpoint/pom.xml
@@ -14,12 +14,13 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.codice.alliance.nsili</groupId>
+        <groupId>org.codice.alliance</groupId>
         <artifactId>nsili</artifactId>
         <version>1.10.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>Alliance :: NSILI :: Endpoint</name>
+    <groupId>org.codice.alliance.nsili</groupId>
     <artifactId>catalog-nsili-endpoint</artifactId>
     <packaging>bundle</packaging>
 
@@ -29,6 +30,7 @@
     </properties>
 
     <dependencies>
+        <!--
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
@@ -39,6 +41,7 @@
             <artifactId>catalog-core-api-impl</artifactId>
             <version>${ddf.version}</version>
         </dependency>
+        -->
         <dependency>
             <groupId>ddf.platform.util</groupId>
             <artifactId>platform-util</artifactId>
@@ -106,8 +109,13 @@
             <version>${ddf.version}</version>
         </dependency>
         <dependency>
+            <groupId>ddf.security.core</groupId>
+            <artifactId>security-core-services</artifactId>
+            <version>${ddf.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ddf.security.handler</groupId>
-            <artifactId>security-handler-api</artifactId>
+            <artifactId>security-handler-impl</artifactId>
             <version>${ddf.version}</version>
         </dependency>
         <dependency>
@@ -135,12 +143,14 @@
             <artifactId>catalog-nsili-transformer</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-solr</artifactId>
             <version>${ddf.version}</version>
             <scope>test</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>org.codice.alliance.nsili</groupId>
             <artifactId>catalog-nsili-orb-api</artifactId>
