--- a/catalog-nsili-source/pom.xml
+++ b/catalog-nsili-source/pom.xml
@@ -15,11 +15,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.codice.alliance.nsili</groupId>
+        <groupId>org.codice.alliance</groupId>
         <artifactId>nsili</artifactId>
         <version>1.10.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.codice.alliance.nsili</groupId>
     <artifactId>catalog-nsili-source</artifactId>
     <packaging>bundle</packaging>
     <name>Alliance :: NSILI :: Source</name>
