--- a/catalog-nsili-sourcestoquery-ui/pom.xml
+++ b/catalog-nsili-sourcestoquery-ui/pom.xml
@@ -15,10 +15,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <groupId>org.codice.alliance</groupId>
         <artifactId>nsili</artifactId>
-        <groupId>org.codice.alliance.nsili</groupId>
         <version>1.10.0-SNAPSHOT</version>
     </parent>
+    <groupId>org.codice.alliance.nsili</groupId>
     <artifactId>catalog-nsili-sourcestoquery-ui</artifactId>
     <name>Alliance :: NSILI :: UI Plugin</name>
     <packaging>bundle</packaging>
@@ -110,7 +111,7 @@
                                         <limit implementation="org.codice.jacoco.LenientLimit">
                                             <counter>BRANCH</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.0</minimum>
+                                            <minimum>0.02</minimum>
                                         </limit>
                                         <limit implementation="org.codice.jacoco.LenientLimit">
                                             <counter>COMPLEXITY</counter>
