--- a/catalog-nsili-transformer/pom.xml
+++ b/catalog-nsili-transformer/pom.xml
@@ -15,11 +15,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.codice.alliance.nsili</groupId>
+        <groupId>org.codice.alliance</groupId>
         <artifactId>nsili</artifactId>
         <version>1.10.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.codice.alliance.nsili</groupId>
     <artifactId>catalog-nsili-transformer</artifactId>
     <packaging>jar</packaging>
     <name>Alliance :: NSILI :: Input Transformer</name>
@@ -72,8 +73,13 @@
         </dependency>
         <dependency>
             <groupId>org.codice.alliance.catalog.core</groupId>
+            <artifactId>catalog-core-api</artifactId>
+            <version>${alliance.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codice.alliance.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
-            <version>${project.version}</version>
+            <version>${alliance.version}</version>
         </dependency>
     </dependencies>
 
