--- a/distribution/docs/pom.xml
+++ b/distribution/docs/pom.xml
@@ -19,8 +19,9 @@
         <artifactId>distribution</artifactId>
         <version>1.10.0-SNAPSHOT</version>
     </parent>
+    <groupId>org.codice.alliance.nsili.distribution</groupId>
     <artifactId>docs</artifactId>
-    <name>Alliance :: Docs</name>
+    <name>Alliance :: NSILI :: Distribution :: Docs</name>
     <dependencies>
         <dependency>
             <groupId>org.asciidoctor</groupId>
