--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -15,22 +15,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.codice.alliance.nsili</groupId>
+        <groupId>org.codice.alliance</groupId>
         <artifactId>nsili</artifactId>
         <version>1.10.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.codice.alliance.nsili</groupId>
     <artifactId>distribution</artifactId>
     <packaging>pom</packaging>
-    <name>Alliance :: Distribution</name>
+    <name>Alliance :: NSILI :: Distribution</name>
 
     <properties>
-        <sitename.default>alliance.distribution</sitename.default>
+        <hamcrest-all.servicemix.version>1.3_1</hamcrest-all.servicemix.version>
+        <hamcrest-all.version>1.3</hamcrest-all.version>
     </properties>
 
     <modules>
         <module>docs</module>
-        <module>sdk</module>
+        <module>nsili-app</module>
+        <module>nsili-sdk</module>
         <module>test</module>
-    </modules> 
+    </modules>
 </project>
