--- a/distribution/test/pom.xml
+++ b/distribution/test/pom.xml
@@ -19,365 +19,24 @@
         <artifactId>distribution</artifactId>
         <version>1.10.0-SNAPSHOT</version>
     </parent>
-    <groupId>org.codice.alliance.test.nsili</groupId>
+    <groupId>org.codice.alliance.nsili.test</groupId>
     <artifactId>test</artifactId>
-    <name>Alliance :: Test :: NSILI</name>
-
-    <properties>
-        <!-- Copied from ops4j/org.ops4j.pax.exam2/4.11.0/pom/pom.xml
-         Do not change these unless upgrading pax exam-->
-        <pax.tinybundles.version>2.1.1</pax.tinybundles.version>
-        <pax.url.version>2.4.5</pax.url.version>
-        <solr.script.dir>
-            ${project.build.directory}/solr/bin/
-        </solr.script.dir>
-        <solr.port>9784</solr.port>
-        <zookeeper.port>10784</zookeeper.port>
-    </properties>
-
-    <dependencies>
-        <!--start pax-exam dependencies-->
-        <dependency>
-            <groupId>org.apache.karaf.bundle</groupId>
-            <artifactId>org.apache.karaf.bundle.core</artifactId>
-            <version>${karaf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-spi</artifactId>
-            <version>${pax.exam.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-container-karaf</artifactId>
-            <version>${pax.exam.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-junit4</artifactId>
-            <version>${pax.exam.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam</artifactId>
-            <version>${pax.exam.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.url</groupId>
-            <artifactId>pax-url-aether</artifactId>
-            <version>${pax.url.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>${javax.inject.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ops4j.pax.tinybundles</groupId>
-            <artifactId>tinybundles</artifactId>
-            <version>${pax.tinybundles.version}</version>
-        </dependency>
-        <!--end pax-exam dependencies-->
-
-        <!--start ddf dependencies-->
-        <dependency>
-            <groupId>ddf.thirdparty</groupId>
-            <artifactId>rest-assured</artifactId>
-            <version>${ddf.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ddf.thirdparty</groupId>
-            <artifactId>restito</artifactId>
-            <version>${ddf.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ddf.catalog.core</groupId>
-            <artifactId>catalog-core-api</artifactId>
-            <version>${ddf.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ddf.distribution</groupId>
-            <artifactId>sdk-app</artifactId>
-            <version>${ddf-sdk.version}</version>
-            <classifier>features</classifier>
-            <type>xml</type>
-        </dependency>
-        <!--end ddf dependencies-->
-
-        <dependency>
-            <groupId>org.awaitility</groupId>
-            <artifactId>awaitility</artifactId>
-            <version>${awaitility.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.alliance.test.itests</groupId>
-            <artifactId>test-itests-common</artifactId>
-            <version>${alliance.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.alliance.nsili.distribution</groupId>
-            <artifactId>sample-nsili-server</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.alliance.nsili.distribution</groupId>
-            <artifactId>sample-nsili-client</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.alliance.distribution</groupId>
-            <artifactId>sample-mpegts-streamgenerator</artifactId>
-            <version>${alliance.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.alliance.distribution</groupId>
-            <artifactId>alliance</artifactId>
-            <version>${alliance.version}</version>
-            <type>zip</type>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.alliance.security</groupId>
-            <artifactId>banner-marking</artifactId>
-            <version>${alliance.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.alliance.test.itests</groupId>
-            <artifactId>test-itests-dependencies-app</artifactId>
-            <version>${alliance.version}</version>
-            <classifier>features</classifier>
-            <type>xml</type>
-        </dependency>
-        <dependency>
-            <groupId>org.codice.alliance.distribution</groupId>
-            <artifactId>sdk-app</artifactId>
-            <version>${alliance.version}</version>
-            <classifier>features</classifier>
-            <type>xml</type>
-        </dependency>
-        <dependency>
-            <groupId>ddf</groupId>
-            <artifactId>solr-distro</artifactId>
-            <version>${ddf.version}</version>
-            <classifier>assembly</classifier>
-            <type>zip</type>
-        </dependency>
-        <dependency>
-            <groupId>ddf.platform.security</groupId>
-            <artifactId>security-rest-clientapi</artifactId>
-            <version>${ddf.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <packaging>pom</packaging>
+    <name>Alliance :: NSILI :: Test</name>
 
     <profiles>
         <profile>
-            <id>Windows</id>
+            <!-- The itests profile is here so we can selectively skip the itest modules. We need a
+                 way to skip them because OWASP scans will report CVEs for itest dependencies if the
+                 itest modules are run. These CVEs add a bunch of noise to the OWASP reports. -->
+            <id>itests</id>
             <activation>
-                <os>
-                    <family>Windows</family>
-                </os>
+                <activeByDefault>true</activeByDefault>
             </activation>
-            <properties>
-                <solr.script.file>solr.cmd</solr.script.file>
-                <solr.force />
-            </properties>
-        </profile>
-        <profile>
-            <id>Unix</id>
-            <activation>
-                <os>
-                    <family>unix</family>
-                </os>
-            </activation>
-            <properties>
-                <solr.script.file>solr</solr.script.file>
-                <solr.force>-force</solr.force>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>make-solr-executable</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                                <configuration>
-                                    <executable>chmod</executable>
-                                    <arguments>
-                                        <argument>+x</argument>
-                                        <argument>
-                                            ${solr.script.dir}${solr.script.file}
-                                        </argument>
-                                    </arguments>
-                                    <async>true</async>
-                                    <asyncDestroyOnShutdown>true</asyncDestroyOnShutdown>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
+            <modules>
+                <module>itests</module>
+            </modules>
         </profile>
     </profiles>
 
-    <build>
-        <plugins>
-            <!--Unpack Solr distribution-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>unpack-solr</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>ddf</groupId>
-                                    <artifactId>solr-distro</artifactId>
-                                    <version>${ddf.version}</version>
-                                    <type>zip</type>
-                                    <classifier>assembly</classifier>
-                                    <!--FYI: Maven dependency plugin ignores the instruction "destFileName"-->
-                                    <!--if the goal is "unpack"-->
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <configuration>
-                    <!--Do not run this plugin exection if the we are skipping tests-->
-                    <skip>${skipTests}</skip>
-                    <longModulepath>false</longModulepath>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>ensure-solr-is-stopped</id>
-                        <phase>pre-clean</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${solr.script.dir}${solr.script.file}</executable>
-                            <arguments>
-                                <argument>stop</argument>
-                                <argument>-p</argument>
-                                <argument>${solr.port}</argument>
-                            </arguments>
-                            <async>true</async>
-                            <asyncDestroyOnShutdown>true</asyncDestroyOnShutdown>
-                            <successCodes>
-                                <successCode>0</successCode>
-                                <successCode>1</successCode>
-                            </successCodes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>start-solr</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>
-                                ${solr.script.dir}${solr.script.file}
-                            </executable>
-                            <arguments>
-                                <argument>start</argument>
-                                <argument>-c</argument>
-                                <argument>-p</argument>
-                                <argument>${solr.port}</argument>
-                                <argument>-m</argument>
-                                <argument>512m</argument>
-                                <argument>${solr.force}</argument>
-                            </arguments>
-                            <async>true</async>
-                            <asyncDestroyOnShutdown>true</asyncDestroyOnShutdown>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>stop-solr</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${solr.script.dir}${solr.script.file}</executable>
-                            <arguments>
-                                <argument>stop</argument>
-                                <argument>-p</argument>
-                                <argument>${solr.port}</argument>
-                            </arguments>
-                            <async>true</async>
-                            <asyncDestroyOnShutdown>true</asyncDestroyOnShutdown>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.servicemix.tooling</groupId>
-                <artifactId>depends-maven-plugin</artifactId>
-                <version>1.3.1</version>
-                <executions>
-                    <execution>
-                        <id>generate-depends-file</id>
-                        <goals>
-                            <goal>generate-depends-file</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8.1</version>
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <!--Using version 2.17 instead of the latest (2.19.1) because everything after 2.17 has-->
-                <!--problems connecting to the container or running the tests-->
-                <version>2.17</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Suite.java</include>
-                    </includes>
-                    <argLine>${jacoco.argline}</argLine>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
