--- a/pom.xml
+++ b/pom.xml
@@ -16,19 +16,19 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>nsili</artifactId>
     <version>1.10.0-SNAPSHOT</version>
-    <groupId>org.codice.alliance.nsili</groupId>
+    <groupId>org.codice.alliance</groupId>
     <packaging>pom</packaging>
     <name>Alliance :: NSILI</name>
     <parent>
-        <groupId>ddf</groupId>
-        <artifactId>ddf-parent</artifactId>
-        <version>1.0.9</version>
+        <groupId>org.codice</groupId>
+        <artifactId>alliance</artifactId>
+        <version>1.13.1</version>
     </parent>
     <properties>
        <!--Project properties-->
         <codice-maven.version>0.2</codice-maven.version>
-        <ddf.version>2.22.0</ddf.version>
-        <alliance.version>1.9.0</alliance.version>
+        <ddf.version>2.25.2</ddf.version>
+        <alliance.version>1.13.1</alliance.version>
         <codice-test.version>0.3</codice-test.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <commons-io.version>2.6</commons-io.version>
@@ -208,6 +208,7 @@
              <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
+                <version>${karaf.version}</version>
                 <executions>
                     <execution>
                         <id>kar</id>
@@ -301,7 +302,6 @@
         <module>catalog-nsili-transformer</module>
         <module>catalog-nsili-endpoint</module>
         <module>catalog-nsili-sourcestoquery-ui</module>
-        <module>nsili-app</module>
         <module>distribution</module>
     </modules>
 </project>
