--- a/distribution/nsili-app/pom.xml
+++ b/distribution/nsili-app/pom.xml
@@ -61,20 +61,16 @@
             <artifactId>catalog-core-api</artifactId>
             <version>${alliance.version}</version>
         </dependency>
-        <!--
         <dependency>
             <groupId>org.codice.alliance.catalog.core</groupId>
             <artifactId>catalog-email-api</artifactId>
-            <version>${project.version}</version>
+            <version>${alliance.version}</version>
         </dependency>
-        -->
-        <!--
         <dependency>
             <groupId>org.codice.alliance.catalog.core</groupId>
             <artifactId>catalog-email-impl</artifactId>
-            <version>${project.version}</version>
+            <version>${alliance.version}</version>
         </dependency>
-        -->
     </dependencies>
 
     <build>
