--- a/distribution/test/itests/nsili-test-itests-dependencies-app/pom.xml
+++ b/distribution/test/itests/nsili-test-itests-dependencies-app/pom.xml
@@ -25,7 +25,7 @@
     <groupId>org.codice.alliance.nsili.test.itests.itests</groupId>
     <artifactId>nsili-test-itests-dependencies-app</artifactId>
     <name>Alliance :: NSILI :: Test :: Integration :: Dependencies App</name>
-    <packaging>pom</packaging>
+    <packaging>kar</packaging>
     <properties>
         <httpcore.version>4.4.5</httpcore.version>
         <httpclient.version>4.5.2</httpclient.version>
@@ -110,6 +110,11 @@
             <version>${ddf.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codice.alliance.nsili.test.itests.itests</groupId>
+            <artifactId>nsili-test-itests-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.codice.alliance.nsili</groupId>
             <artifactId>catalog-nsili-source</artifactId>
