--- a/catalog-nsili-bqs/pom.xml
+++ b/catalog-nsili-bqs/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.5.1-1</version>
+            <version>${antlr4-runtime.version}</version>
         </dependency>
     </dependencies>
 
