--- a/catalog-nsili-source/pom.xml
+++ b/catalog-nsili-source/pom.xml
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.5.1-1</version>
+            <version>${antlr4-runtime.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
