--- a/distribution/nsili-sdk/sample-nsili-client/pom.xml
+++ b/distribution/nsili-sdk/sample-nsili-client/pom.xml
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.5.1-1</version>
+            <version>${antlr4-runtime.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -123,6 +123,16 @@
             <artifactId>security-core-impl</artifactId>
             <version>${ddf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+            <version>${google-http-client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.woodstox</groupId>
+            <artifactId>stax2-api</artifactId>
+            <version>${woodstox.stax2-api.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -146,9 +156,11 @@
                             geospatial,
                             jgrapht-core,
                             joda-time,
+                            google-http-client,
                             security-core-impl
                         </Embed-Dependency>
                         <Import-Package>
+                            !com.google.errorprone*,
                             org.antlr.v4.gui;resolution:=optional,
                             *
                         </Import-Package>
