--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,11 @@
         <error_prone_core.version>2.1.2</error_prone_core.version>
         <jgrapht-core.version>0.9.1</jgrapht-core.version>
         <google-http-client.version>1.22.0</google-http-client.version>
-        <google-http-client.version>1.22.0</google-http-client.version>
         <guava.platform>jre</guava.platform>
         <guava.version-number>25.1</guava.version-number>
         <guava.version>${guava.version-number}-${guava.platform}</guava.version>
         <httpclient.version>4.5.6</httpclient.version>
-        <httpcore.version>4.4.10</httpcore.version>
+        <httpcore.version>4.4.10</httpcore.version>    
         <javax.ws.rs.version>2.1</javax.ws.rs.version>  
         <jts.version>1.16.0</jts.version>
         <log4j.version>2.11.0</log4j.version>
@@ -55,7 +54,7 @@
         <xstream.version>1.4.9</xstream.version>
         <woodstox.core.version>5.3.0</woodstox.core.version>
         <woodstox.stax2-api.version>4.2</woodstox.stax2-api.version>
-
+        <antlr4-runtime.version>4.5.1-1</antlr4-runtime.version>
          <!--Documentation properties-->
         <asciidoctor.source.highlighter>coderay</asciidoctor.source.highlighter>
         <asciidoctorj.diagram.version>1.5.4.1</asciidoctorj.diagram.version>
